# project_llm

./: .gitignore  ANALYSIS_COMPLIANCE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  приложение ТЗ.txt  приложение план и блоки.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  ui.py
app/config/: __init__.py  loader.py  schemas.py  validation.py
app/core/: aggregation.py  aggregation_engine.py  executors.py  model_registry.py  model_wrapper.py  output_cleaner.py  pipeline_engine.py  reasoning_sanitizer.py  resource_manager.py  session_manager.py
config/: cleaning_rules.example.yaml  cleaning_rules.yaml  models.example.yaml  models.yaml  pipeline.example.yaml  pipeline.yaml  reasoning_rules.yaml
project_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: bootstrap.sh  run_cli_example.sh  run_ui.sh
tests/: test_aggregation.py  test_config_validation.py  test_output_cleaner.py  test_pipeline_execution.py  test_resource_manager.py  test_session_manager.py
